--- a/PreHands_PPTF5_Effect/PreHands/PreHands/MainWindow.xaml
+++ b/PreHands_PPTF5_Effect/PreHands/PreHands/MainWindow.xaml
@@ -5,28 +5,61 @@
         xmlns:Controls="clr-namespace:Coding4Fun.Kinect.Wpf.Controls;assembly=Coding4Fun.Kinect.Wpf" 
         xmlns:local="clr-namespace:PreHands"
         Closing="Window_Closing" 
-        Title="MainWindow" Height="600" Width="800" Loaded="Window_Loaded" 
+        Title="EFFECTIVE MOTION CONTROL [Pre Hands]" Height="600" Width="800" Loaded="Window_Loaded" 
         WindowState="Maximized"
         >
-    
-    <Window.CommandBindings>
-        <CommandBinding Command="local:MainWindow.ShowSettings" Executed="OnShowSettings" />
-        <CommandBinding Command="local:MainWindow.HideSettings" Executed="OnHideSettings" />
-    </Window.CommandBindings>
-  
+   
     <Canvas Name="MainCanvas" >
         <my:KinectColorViewer Stretch="UniformToFill" Canvas.Left="0" Canvas.Top="0" Width="800" Height="600" Name="kinectColorViewer1" 
-                              Kinect="{Binding ElementName=kinectSensorChooser1, Path=Kinect}" />
+                              Kinect="{Binding ElementName=kinectSensorChooser1, Path=Kinect}" >
+        </my:KinectColorViewer>
+
         <Ellipse Canvas.Left="0" Canvas.Top="0" Height="50" Name="leftEllipse"  Width="50" Fill="#FF4D298D" Opacity="1" Stroke="White" />
         <Ellipse Canvas.Left="100" Canvas.Top="0" Fill="#FF2CACE3" Height="50" Name="rightEllipse" Width="50" Opacity="1" Stroke="White" />
         <my:KinectSensorChooser Canvas.Left="250" Canvas.Top="380" Name="kinectSensorChooser1" Width="328" />
         <Image Canvas.Left="66" Canvas.Top="90" Height="87" Name="headImage" Stretch="Fill" Width="84" Source="/Images/Face.png" />
 
 
-        <Button Name="SettingsButton" Margin="750 0 0 0" VerticalAlignment="Stretch" 
-                 Height="566"  Width="45" Command="Open">
+        <Button Name="SettingsButton" Margin="750 0 0 0" VerticalAlignment="Stretch" Canvas.Right="0" Height="{Binding Source={x:Static SystemParameters.FullPrimaryScreenHeight}}"  Width="45" MouseEnter="OnShowSettings" MouseLeave="OnHideSettings">
+            <Button.Triggers>
+                <EventTrigger RoutedEvent="MouseEnter">
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation 
+                               Storyboard.TargetName="SettingsButton" 
+                               Storyboard.TargetProperty="(Button.Width)"
+                               From="45" 
+                               To="220" 
+                               Duration="0:0:0.5" />
+                            <DoubleAnimation 
+                                Storyboard.TargetName="SettingsControl" 
+                                Storyboard.TargetProperty="(local:SettingsControl.Width)"
+                                From="0"
+                                To="220" 
+                                Duration="0:0:0.5" />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+                <EventTrigger RoutedEvent="MouseLeave">
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation 
+                               Storyboard.TargetName="SettingsButton" 
+                               Storyboard.TargetProperty="(Button.Width)"
+                               From="220" 
+                               To="45" 
+                               Duration="0:0:0.5" />
+                            <DoubleAnimation 
+                                Storyboard.TargetName="SettingsControl" 
+                                Storyboard.TargetProperty="(local:SettingsControl.Width)"
+                                To="0" 
+                                Duration="0:0:0.4" />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+            </Button.Triggers>
             <StackPanel>
-                <TextBlock>
+                <TextBlock  Name="setting_title" Height="19" HorizontalAlignment="Center">
                     <TextBlock.LayoutTransform>
                         <TransformGroup>
                             <RotateTransform Angle="270" />
@@ -34,37 +67,10 @@
                     </TextBlock.LayoutTransform>
                         Settings
                 </TextBlock>
-                <Image Source="Images\Settings-icon.png" Width="33" Height="33" Margin="0,10,0,0" HorizontalAlignment="Center"/>
+                <Image Name ="setting_img" Source="Images\Settings-icon.png" Width="33" Height="33" Margin="0,10,0,0" HorizontalAlignment="Center"/>
+                <local:SettingsControl Margin="0,0,0,0" x:Name="SettingsControl" HorizontalAlignment="Right" VerticalAlignment="Stretch" Settings="{Binding Settings}"  Width="213" RenderTransformOrigin="0.484,0.525" Height="{Binding Source={x:Static SystemParameters.FullPrimaryScreenHeight}}" Visibility="Collapsed"/>
             </StackPanel>
         </Button>
-        <local:SettingsControl x:Name="SettingsControl" HorizontalAlignment="Right" VerticalAlignment="Stretch" Settings="{Binding Path=Settings}" />
-        
-        
-        
-        <Controls:HoverButton Name="hoverButtonRight" Canvas.Left="620" Canvas.Top="20" Height="80" Width="150" ImageSize="78" BorderBrush="White" Background="Purple" 
-                               Opacity="1" Click="hoverButtonRight_Click">
-        </Controls:HoverButton>
-
-        <TextBlock TextAlignment="Right" Margin="630 42 10 10" FontSize="23" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Hyperlink Foreground="White" Cursor="Hand" Name="PPT_Link">
-                    Presentation
-                </Hyperlink>
-        </TextBlock>
-
-        <Controls:HoverButton Name="hoverButtonRight2" Canvas.Left="620" Canvas.Top="120" Height="80" Width="150" ImageSize="78" BorderBrush="White" Background="Purple" 
-                              FontSize="8" Opacity="1" Click="hoverButtonRight_Click">
-            <TextBlock FontSize="22" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center">Mouse Cursor</TextBlock>
-        </Controls:HoverButton>
-
-        <Controls:HoverButton Name="hoverButtonRight3" Canvas.Left="620" Canvas.Top="220" Height="80" Width="150" ImageSize="78" BorderBrush="White" Background="Purple" 
-                              FontSize="8" Opacity="1" Click="hoverButtonRight_Click">
-        </Controls:HoverButton>
-
-        <TextBlock TextAlignment="Right" Margin="640 240 10 10" FontSize="23" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Hyperlink NavigateUri="/Record/KinectRecorder.cs" Foreground="White" Cursor="Hand" Name="Record_Link">
-                    Recording
-                </Hyperlink>
-        </TextBlock>
         
     </Canvas>
 </Window>
