--- a/PreHands_PPTF5_Effect/PreHands/PreHands/SettingsControl.xaml
+++ b/PreHands_PPTF5_Effect/PreHands/PreHands/SettingsControl.xaml
@@ -52,7 +52,7 @@
         </Style>
     </UserControl.Resources>
     <Grid x:Name="LayoutRoot" VerticalAlignment="Center">
-        <TextBlock Style="{StaticResource SettingsSectionTitleStyle}" Text="WELCOME TO PRE HANDS" TextAlignment="Center"/>
+        <TextBlock Style="{StaticResource SettingsSectionTitleStyle}" Text="WELCOME TO PRE HANDS" TextAlignment="Center" HorizontalAlignment="Right" Margin="0,5,0,0" Width="211"/>
 
         <Grid>
             <Grid.ColumnDefinitions >
@@ -65,16 +65,18 @@
             </Grid.RowDefinitions>
 
             <TextBlock Grid.Column="0" Margin="40, 23"  Style="{StaticResource SettingsSubSectionTitleStyle}" Text="Setting Mode Display"/>
-            
+
 
         </Grid>
 
         <DockPanel>
-            <StackPanel Orientation="Vertical" Margin="50,60,50,10" DockPanel.Dock="top">
-            <Button Content="PPT Control" Style="{StaticResource SaveOpenButtonStyle}" Margin="0,10,0,0"  Click="Button_Click" />
-            <Button Content="Mouse Control" Style="{StaticResource SaveOpenButtonStyle}" Margin="0,10,0,0" Click="Button_Click_1" />
-            <Button Content="Start Record" Style="{StaticResource SaveOpenButtonStyle}" Margin="0,10,0,0" Click="Button_Click_2" />
+            <Ellipse Fill="#2FED28" x:Name="recordState" Width="10" Opacity="1" Stroke="White" Margin="35,140,5,0" Height="10" DockPanel.Dock="Left" Visibility="Hidden"/>
+            <StackPanel Orientation="Vertical" Margin="0,60,50,10" DockPanel.Dock="top">
+                <Button Content="PPT Control" Style="{StaticResource SaveOpenButtonStyle}" Margin="0,10,0,0"  Click="Button_Click" />
+                <Button Content="Mouse Control" Style="{StaticResource SaveOpenButtonStyle}" Margin="0,10,0,0" Click="Button_Click_1" />
+                <Button Content="Start Record" Style="{StaticResource SaveOpenButtonStyle}" Margin="0,10,0,0" Click="Button_Click_2" />
             </StackPanel>
+            
         </DockPanel>
 
         <!--<Button HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="50" Background="Transparent" FontFamily="Segoe UI Symbol" BorderBrush="{x:Null}" Margin="0,5,0,0"  Foreground="{StaticResource LightGrayBrush}" >
